--- a/index.html
+++ b/index.html
@@ -152,11 +152,21 @@
                                         <h4> Come on, lets get to know me better</h4>
                                         <hr>
                                         <div class = "social-icon">
-                                            <i class="fa fa-instagram" aria-hidden = "true"></i>
-                                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                                            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                                            <i class="fa fa-github" aria-hidden="true"></i>
+                                            <a href="http://" target="_blank" rel="noopener noreferrer">
+                                                <i class="fa fa-instagram" aria-hidden = "true"></i>
+                                            </a>
+                                            <!-- <a href="http://" target="_blank" rel="noopener noreferrer">
+                                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                                            </a> -->
+                                            <a href="http://" target="_blank" rel="noopener noreferrer">
+                                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                                            </a>
+                                            <a href="http://" target="_blank" rel="noopener noreferrer">
+                                                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                                            </a>
+                                            <a href="https://github.com/Omar-Shaikh1542" target="_blank" rel="noopener noreferrer">
+                                                <i class="fa fa-github" aria-hidden="true"></i>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -226,7 +236,7 @@
                             </p>  
                         </div>
                         <div class = "info-contact">
-                            <a name="resume-download" id="resum-download" class=" resume btn btn-warning" href="https://giphy.com/gifs/3ohzdJpaPuSiDm0MSI/html5" target="_blank" role="button">download resume</a>
+                            <a name="resume-download" id="resume-download" class=" resume btn btn-warning" href="https://giphy.com/gifs/3ohzdJpaPuSiDm0MSI/html5" target="_blank" role="button">download resume</a>
                             
                             <a name="contact-det" id="contact-det" class=" contact btn btn-warning" href="https://giphy.com/gifs/dZM1RgDfXdWQ0YwbEx/html5" target = "_blank"role="button">contact me</a>
                             
@@ -687,10 +697,22 @@
             <footer class = "foot" id = "foot">
                 <div class = "foot-section">
                     <div class = "foot-icon">
-                        <img src="https://img.icons8.com/ios/25/000000/instagram-new.png"/>
-                        <img src="https://img.icons8.com/ios-filled/25/000000/linkedin.png"/>
-                        <img src="https://img.icons8.com/ios-filled/25/000000/twitter.png"/>
-                        <img src="https://img.icons8.com/ios-filled/25/000000/github.png"/>
+
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <img src="https://img.icons8.com/ios/25/000000/instagram-new.png"/>
+                        </a>
+
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <img src="https://img.icons8.com/ios-filled/25/000000/linkedin.png"/>
+                        </a>
+
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <img src="https://img.icons8.com/ios-filled/25/000000/twitter.png"/>
+                        </a>
+
+                        <a href="https://github.com/Omar-Shaikh1542" target="_blank" >
+                            <img src="https://img.icons8.com/ios-filled/25/000000/github.png"/>
+                        </a>
 
 
                     </div>
