--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                             <h4 class = "dev-title photo-dev-title col-5">Photography</h4>
                             <div class = "dev-info photo-dev-info col-7">
                                 <p>
-                                    photography isnt something that im exteremely excited about but ive been forced to take pictures on every family event and somehow that has just made me a better photographer.I consider myself to be good at photography.
+                                    photography isnt something that im exteremely excited about but ive been forced into taking pictures at evens so much that iv'e gotten great at it.
                                     
                                 </p>
                             </div>
