--- a/index.html
+++ b/index.html
@@ -152,17 +152,18 @@
                                         <h4> Come on, lets get to know me better</h4>
                                         <hr>
                                         <div class = "social-icon">
-                                            <a href="http://" target="_blank" rel="noopener noreferrer">
+                                            <a href="https://www.instagram.com/tumbling0_0tortoise/?hl=en" target="_blank" rel="noopener noreferrer">
                                                 <i class="fa fa-instagram" aria-hidden = "true"></i>
                                             </a>
                                             <!-- <a href="http://" target="_blank" rel="noopener noreferrer">
                                                 <i class="fa fa-facebook" aria-hidden="true"></i>
                                             </a> -->
-                                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                            </a>
-                                            <a href="http://" target="_blank" rel="noopener noreferrer">
+                                            <a href="www.linkedin.com/in/omar-shaikh-bizz1542" target="_blank" rel="noopener noreferrer">
                                                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                                            </a>
+
+                                            <a href="https://twitter.com/tortoise1542" target="_blank" rel="noopener noreferrer">
+                                                <i class="fa fa-twitter" aria-hidden="true"></i>
                                             </a>
                                             <a href="https://github.com/Omar-Shaikh1542" target="_blank" rel="noopener noreferrer">
                                                 <i class="fa fa-github" aria-hidden="true"></i>
@@ -699,15 +700,15 @@
                 <div class = "foot-section">
                     <div class = "foot-icon">
 
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.instagram.com/tumbling0_0tortoise/?hl=en" target="_blank" rel="noopener noreferrer">
                             <img src="https://img.icons8.com/ios/25/000000/instagram-new.png"/>
                         </a>
 
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="www.linkedin.com/in/omar-shaikh-bizz1542" target="_blank" rel="noopener noreferrer">
                             <img src="https://img.icons8.com/ios-filled/25/000000/linkedin.png"/>
                         </a>
 
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://twitter.com/tortoise1542" target="_blank" rel="noopener noreferrer">
                             <img src="https://img.icons8.com/ios-filled/25/000000/twitter.png"/>
                         </a>
 
