--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             </p>  
                         </div>
                         <div class = "info-contact">
-                            <a name="resume-download" id="resume-download" class=" resume btn btn-warning" href="My resume.docx" target="_blank" role="button">download resume</a>
+                            <a name="resume-download" id="resume-download" class=" resume btn btn-warning" href="My resume.pdf" target="_blank" role="button">download resume</a>
                             
                             <a name="contact-det" id="contact-det" class=" contact btn btn-warning" href="https://www.linkedin.com/in/omar-shaikh-bizz1542/" target = "_blank" role="button">contact me</a>
                             
